--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -2,9 +2,9 @@
 import { type CollectionEntry, getCollection } from 'astro:content';
 import BlogPost from '../../layouts/BlogPost.astro';
 import { render } from 'astro:content';
-import LikeCounter from '@components/likes/LikeCounter.vue';
+import LikeCounterActions from '@components/likes/LikeCounterActions.vue';
 
-export const prerender = true
+export const prerender = true;
 
 export async function getStaticPaths() {
 	const posts = await getCollection('blog');
@@ -20,12 +20,12 @@ const { Content } = await render(post);
 ---
 
 <BlogPost {...post.data}>
-
-	<div style={{
-		height: '50px'
-	}}>
-
-		<LikeCounter postId={post.id} client:only="vue" />
+	<div
+		style={{
+			height: '50px',
+		}}>
+		<!-- <LikeCounter postId={post.id} client:only="vue" /> -->
+		<LikeCounterActions postId={post.id} client:only="vue" />
 	</div>
 
 	<Content />
